<resources>
    <string name="app_name">MenusAndStuff</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_text">Date</string>
    <string name="time_text">time</string>
    <string name="pink">Pink</string>
    <string name="red">Red</string>
    <string name="cyan">cyan</string>
    <string name="yellow">Yellow</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="exit">Exit</string>
    <string name="exit_text">You made the right choice</string>
</resources>